examples/sample-product-chart/chart-test/reports/run-curated-live-20260602-234624-95262/scenario-gateway-api-istio-gateway-api-basic-20260602-235040/artifacts/manifests/gatewayclasses.yaml
apiVersion: v1
items:
- apiVersion: gateway.networking.k8s.io/v1
  kind: GatewayClass
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"gateway.networking.k8s.io/v1","kind":"GatewayClass","metadata":{"annotations":{},"name":"istio"},"spec":{"controllerName":"istio.io/gateway-controller"}}
    creationTimestamp: "2026-06-03T03:51:17Z"
    generation: 1
    name: istio
    resourceVersion: "690"
    uid: f12533e7-6b1f-4cca-bb18-9d94b7960947
  spec:
    controllerName: istio.io/gateway-controller
    description: The default Istio GatewayClass
  status:
    conditions:
    - lastTransitionTime: "2026-06-03T03:51:17Z"
      message: Handled by Istio controller
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
- apiVersion: gateway.networking.k8s.io/v1
  kind: GatewayClass
  metadata:
    creationTimestamp: "2026-06-03T03:51:17Z"
    generation: 1
    name: istio-remote
    resourceVersion: "676"
    uid: ce3e4e61-7870-4b34-b79c-314514526a93
  spec:
    controllerName: istio.io/unmanaged-gateway
    description: Remote to this cluster. Does not deploy or affect configuration.
  status:
    conditions:
    - lastTransitionTime: "2026-06-03T03:51:17Z"
      message: Handled by Istio controller
      observedGeneration: 1
      reason: Accepted
      status: "True"
      type: Accepted
kind: List
metadata:
  resourceVersion: ""
